# ologos-aioc-public

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  IP-BOUNDARY.md  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_usage.py  domain_profile.py  domain_routing.py  evidence_capture.py  governed_tool_call.py
ologos_aioc/: __init__.py  capabilities.py  catalog.py  context.py  decisions.py  events.py  evidence.py  governance.py  orchestrator.py  profiles.py  providers.py  tools.py
profiles/: demo-cyberops.yaml  demo-infraops.yaml
tests/: test_capabilities.py  test_catalog.py  test_conformance.py  test_context.py  test_decisions.py  test_evidence.py  test_governance_gate.py  test_orchestrator.py  test_profiles.py  test_providers.py  test_tools.py
