[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ologos-aioc"
version = "0.2.0"
description = "A reference architecture and executable kernel for the control plane beneath an AI Operations Center: provider gateway, model catalog, tool-calling orchestrator, governance decision gate, evidence plane, and domain-console contracts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ologos Corp" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
profiles = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://ologos.co/aioc/"
Standard = "https://github.com/ologos-repos/ai-harness-engineering"

[tool.setuptools.packages.find]
include = ["ologos_aioc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
